--- a/src/app/business/component/product-list/product-list.component.html
+++ b/src/app/business/component/product-list/product-list.component.html
@@ -29,7 +29,7 @@
     </div>
     <div class="col-md-6">
         <h3>Products added to cart</h3>
-        <app-cart [cart]="cart"></app-cart>
+        <app-cart [cart]="cart" #cartComponent></app-cart>
     </div>
   </div>
 </div>
